[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["G Adam Cox <gadamc@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc23", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.18.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]